--- a/training/load_and_predict_FinalModel.ipynb
+++ b/training/load_and_predict_FinalModel.ipynb
@@ -25,22 +25,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n_u1MIDKVxOT",
-        "outputId": "30203b64-403a-49b3-f30c-7dc0f34d9087"
+        "outputId": "11eedf82-31cf-4c53-ac48-e9b7f7474c2c"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "dttYrN1ZVnNZ"
       },
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cjV4uvzXYvGW",
-        "outputId": "d29d7ea2-2b2c-4b7d-8451-d78bf52c3805"
+        "outputId": "545b3490-8bd7-4874-e7dc-c1846553f472"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,15 +96,15 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "loaded_scaler = joblib.load('/content/drive/MyDrive/빅데이터 팀플/model/final_xgb_scaler.pkl')\n",
-        "loaded_model = joblib.load('/content/drive/MyDrive/빅데이터 팀플/model/final_xgb_model.pkl')\n",
+        "loaded_scaler = joblib.load('/content/drive/MyDrive/빅데이터 팀플/model/final_lgbm_scaler.pkl')\n",
+        "loaded_model = joblib.load('/content/drive/MyDrive/빅데이터 팀플/model/final_lgbm_model.pkl')\n",
         "for k in range(2278):\n",
         "  pred = loaded_model.predict(loaded_scaler.transform(test_input[k:k+1]))\n",
         "  if k % 100 == 0: # 몇 개만 출력해 확인\n",
@@ -120,9 +120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BhgBGv99WLpN",
-        "outputId": "18e99eb8-c1da-47b9-e0ca-03c3b2e67cea"
+        "outputId": "3ef8c335-b638-4ea8-8a06-db19c764bd24"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,11 +173,11 @@
             "실제: [0]\n",
             "\n",
             "1100 번째:\n",
-            "예측: [0]\n",
+            "예측: [2]\n",
             "실제: [0]\n",
             "\n",
             "1200 번째:\n",
-            "예측: [2]\n",
+            "예측: [0]\n",
             "실제: [2]\n",
             "\n",
             "1300 번째:\n",
@@ -213,7 +213,7 @@
             "실제: [2]\n",
             "\n",
             "2100 번째:\n",
-            "예측: [0]\n",
+            "예측: [2]\n",
             "실제: [0]\n",
             "\n",
             "2200 번째:\n",
@@ -230,7 +230,7 @@
       "metadata": {
         "id": "IO1AORPSYyHH"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
