--- a/training/load_and_predict_FinalModel.ipynb
+++ b/training/load_and_predict_FinalModel.ipynb
@@ -226,6 +226,50 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+        "\n",
+        "test_pred = loaded_model.predict(loaded_scaler.transform(test_input))\n",
+        "\n",
+        "# 정확도 계산\n",
+        "accuracy = accuracy_score(test_output, test_pred)\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "\n",
+        "# 정밀도 계산\n",
+        "precision = precision_score(test_output, test_pred, average='macro')\n",
+        "print(\"Precision:\", precision)\n",
+        "\n",
+        "# 재현율 계산\n",
+        "recall = recall_score(test_output, test_pred, average='macro')\n",
+        "print(\"Recall:\", recall)\n",
+        "\n",
+        "# F1 스코어 계산\n",
+        "f1 = f1_score(test_output, test_pred, average='macro')\n",
+        "print(\"F1 Score:\", f1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5xxB0_LLAkJc",
+        "outputId": "7d141a0b-f781-48d3-f17e-fba4f7df73c1"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.7726075504828798\n",
+            "Precision: 0.7308847434425226\n",
+            "Recall: 0.7808662772477639\n",
+            "F1 Score: 0.7526889999748554\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "IO1AORPSYyHH"
