--- a/training/load_and_predict_FinalModel.ipynb
+++ b/training/load_and_predict_FinalModel.ipynb
@@ -25,9 +25,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n_u1MIDKVxOT",
-        "outputId": "11eedf82-31cf-4c53-ac48-e9b7f7474c2c"
+        "outputId": "33e75241-7c55-4412-e92e-5e82513e0fdd"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "dttYrN1ZVnNZ"
       },
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cjV4uvzXYvGW",
-        "outputId": "545b3490-8bd7-4874-e7dc-c1846553f472"
+        "outputId": "6c058ab4-52e3-4b32-dbda-a3a522dbbc0f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,9 +120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BhgBGv99WLpN",
-        "outputId": "3ef8c335-b638-4ea8-8a06-db19c764bd24"
+        "outputId": "5c266b90-52c2-4544-c66f-6868ab76e74a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,6 +227,78 @@
     {
       "cell_type": "code",
       "source": [
+        "test_output[k:k+1]['DIAG_NM'] == 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uGF7UmAC1qH-",
+        "outputId": "ad3ba5b0-d8ae-40f6-c040-3b4932ea6cca"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7592    False\n",
+              "Name: DIAG_NM, dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loaded_scaler = joblib.load('/content/drive/MyDrive/빅데이터 팀플/model/final_lgbm_scaler.pkl')\n",
+        "loaded_model = joblib.load('/content/drive/MyDrive/빅데이터 팀플/model/final_lgbm_model.pkl')\n",
+        "\n",
+        "cnt02 = 0\n",
+        "cnt01 = 0\n",
+        "cnt12 = 0\n",
+        "\n",
+        "for k in range(2278):\n",
+        "  pred = loaded_model.predict(loaded_scaler.transform(test_input[k:k+1]))\n",
+        "  actual = list(test_output[k:k+1]['DIAG_NM'])\n",
+        "  if actual != pred: # 몇 개만 출력해 확인\n",
+        "    if (pred+actual)==2:\n",
+        "      cnt02+=1\n",
+        "    elif (pred+actual)==1:\n",
+        "      cnt01+=1\n",
+        "    else:\n",
+        "      cnt12+=1\n",
+        "\n",
+        "print(\"정상과 경도인지장애 혼동 :\", cnt02)\n",
+        "print(\"정상과 치매 혼동 :\", cnt01)\n",
+        "print(\"경도인지장애와 치매 혼동 :\", cnt12)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ni46IZCR0PqV",
+        "outputId": "2a41b28b-9f14-4a6d-a7ce-9f13383e3719"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정상과 경도인지장애 혼동 : 436\n",
+            "정상과 치매 혼동 : 56\n",
+            "경도인지장애와 치매 혼동 : 26\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
         "\n",
         "test_pred = loaded_model.predict(loaded_scaler.transform(test_input))\n",
@@ -248,13 +320,13 @@
         "print(\"F1 Score:\", f1)"
       ],
       "metadata": {
+        "id": "5xxB0_LLAkJc",
+        "outputId": "15f2da91-d3c4-4aab-97c3-343eb90d5845",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "5xxB0_LLAkJc",
-        "outputId": "7d141a0b-f781-48d3-f17e-fba4f7df73c1"
+        }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,11 +342,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n"
+      ],
       "metadata": {
         "id": "IO1AORPSYyHH"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     }
   ]
